# filters

./: CMakeLists.txt  README.md  application.cpp  application.h  camera.cpp  camera.h  device.cpp  device.h  filter.cpp  filter.h  main.cpp  pipeline.cpp  pipeline.h  surface.cpp  surface.h  timer.cpp  timer.h
eglut/: eglut.c  eglut_x11.c  eglutint.h
filters/: backgroundsubtraction.cpp  backgroundsubtraction.h  gaussianblur.cpp  gaussianblur.h  sobeloperator.cpp  sobeloperator.h
filters/backgroundsubtraction/: draw.cpp  draw.h  prepare.cpp  prepare.h  update.cpp  update.h
filters/gaussianblur/: linearblur.cpp  linearblur.h
filters/sobeloperator/: blend.cpp  blend.h  gradient.cpp  gradient.h
gpu/: convert.cpp  convert.h  program.cpp  program.h
